--- a/app/src/main/res/layout/fragment_editfish.xml
+++ b/app/src/main/res/layout/fragment_editfish.xml
@@ -16,13 +16,14 @@
             <TextView
                 android:id="@+id/txt_fisch_art"
                 android:text="@string/fisch.art"
-                android:padding="3dip" />
+                android:padding="3dip"/>
 
             <AutoCompleteTextView
                 android:id="@+id/autoComplete_fisch_art"
                 android:layout_span="4"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:hint="@string/fisch.art"/>
         </TableRow>
 
         <TableRow>
@@ -37,7 +38,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:hint="@string/fisch.laenge" />
         </TableRow>
 
         <TableRow
@@ -77,36 +79,31 @@
                 android:layout_column="2"
                 android:text="@string/schaden.bpa" />
 
-            <LinearLayout
+            <RadioGroup
+                android:id="@+id/rbtnGroup_bpa"
                 android:layout_span="2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_gravity="center_horizontal">
 
-                <RadioGroup
+                <RadioButton
+                    android:id="@+id/rbtn_bpa_einstg"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_gravity="center" />
 
-                    <RadioButton
-                        android:id="@+id/rbtn_bpa_einstg"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center" />
+                <Space
+                    android:layout_width="@dimen/horizontal_space"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
 
-                    <Space
-                        android:layout_width="@dimen/horizontal_space"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <RadioButton
-                        android:id="@+id/rbtn_bpa_beidstg"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center" />
-                </RadioGroup>
-            </LinearLayout>
+                <RadioButton
+                    android:id="@+id/rbtn_bpa_beidstg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center" />
+            </RadioGroup>
         </TableRow>
 
         <TableRow
@@ -120,38 +117,33 @@
                 android:layout_column="2"
                 android:text="@string/schaden.sv" />
 
-            <LinearLayout
+            <RadioGroup
+                android:id="@+id/rbtnGroup_sv"
                 android:layout_span="2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_gravity="center_horizontal">
 
-                <RadioGroup
+                <RadioButton
+                    android:id="@+id/rbtn_sv_einstg"
+                    android:textAlignment="center"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_gravity="center" />
 
-                    <RadioButton
-                        android:id="@+id/rbtn_sv_einstg"
-                        android:textAlignment="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center" />
+                <Space
+                    android:layout_width="@dimen/horizontal_space"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
 
-                    <Space
-                        android:layout_width="@dimen/horizontal_space"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <RadioButton
-                        android:id="@+id/rbtn_sv_beidstg"
-                        android:textAlignment="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center" />
-                </RadioGroup>
-            </LinearLayout>
+                <RadioButton
+                    android:id="@+id/rbtn_sv_beidstg"
+                    android:textAlignment="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center" />
+            </RadioGroup>
         </TableRow>
 
         <TableRow
@@ -358,7 +350,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_span="2"
-                android:text="@string/schaden.bemerkung" />
+                android:text="@string/schaden.bemerkung"/>
 
             <EditText
                 android:id="@+id/edit_bemerkung"
@@ -366,7 +358,8 @@
                 android:layout_height="wrap_content"
                 android:layout_span="3"
                 android:ems="10"
-                android:inputType="textMultiLine" />
+                android:inputType="textMultiLine"
+                android:hint="@string/schaden.bemerkung" />
         </TableRow>
 
         <TableRow
@@ -385,6 +378,13 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/antwort.ok" />
+
+                <Button
+                    android:id="@+id/btn_editNext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/antwort.naechster" />
 
                 <Button
                     android:id="@+id/btn_editAbort"
