Datenbankeinträge können bearbeitet werden

--- a/app/src/main/res/menu/menu_fishviewer.xml
+++ b/app/src/main/res/menu/menu_fishviewer.xml
@@ -6,11 +6,10 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 tools:context=".FishViewerFragment"
     >
-
     <item
-        android:id="@+id/fishViewer_action_einstellungen"
+        android:id="@+id/fishViewer_action_newFish"
         android:orderInCategory="100"
-        android:title="@string/menu.einstellungen"
+        android:title="@string/menu.editFish"
         app:showAsAction="never"
         />
 
