--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -5,11 +5,6 @@
     android:layout_width="match_parent"
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
         <TextView
             android:id="@+id/txt_willkommen"
             android:layout_width="match_parent"
@@ -18,12 +13,13 @@
             style="@style/txt_titel"
             />
 
-
         <TextView
             android:id="@+id/txt_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/main.info" />
-    </LinearLayout>
+            android:text="@string/main.info"
+            android:layout_below="@+id/txt_willkommen"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
 </RelativeLayout>
