--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,5 +10,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="horizontal_space">20dp</dimen>
+    <dimen name="vertical_space">8dp</dimen>
 
 </resources>
