--- a/app/src/main/res/layout/autocomplete_item.xml
+++ b/app/src/main/res/layout/autocomplete_item.xml
@@ -2,9 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <TextView
+        android:id="@+id/txt_autocompleteItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -13,5 +15,5 @@
         android:paddingRight="8dp"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
-        android:id="@+id/txt_autocompleteItem" />
+        />
 </RelativeLayout>
