--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -7,19 +7,20 @@
 
         <TextView
             android:id="@+id/txt_willkommen"
+            android:text="@string/main.willkommen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/main.willkommen"
             style="@style/txt_titel"
             />
 
         <TextView
             android:id="@+id/txt_info"
+            android:text="@string/main.info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/main.info"
             android:layout_below="@+id/txt_willkommen"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            />
 
 </RelativeLayout>
